@@ -3,5 +3,10 @@
 
 #include <QString>
 
+#if defined(__DragonFly__)
+  const QString ctn_PKG_BIN = "/usr/local/sbin/pkg";
+#elif
+  const QString ctn_PKG_BIN = "/usr/sbin/pkg";
+#endif
 
 #endif // CONSTANTS_H
